--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,7 @@ body {
   cursor: pointer;
   position: relative;
   margin: 1rem auto;
+  
 }
 
 .movie-director {
@@ -69,4 +70,16 @@ body {
 .home-button {
   padding: 5px 10px;
   background-color: lightskyblue;
+}
+
+.nav-links  {
+  text-decoration: none;
+  color: #1c5d76;
+  font-weight: bold;
+  margin-right: 8px;
+}
+
+a{
+  text-decoration:none;
+  color:black;
 }
